--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ getset    = "0.1"
 walkdir   = "2"
 resiter   = "0.4"
 itertools = "0.9"
+clap-v3   = "3.0.0-beta.1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
