--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ walkdir   = "2"
 resiter   = "0.4"
 itertools = "0.9"
 clap-v3   = "3.0.0-beta.1"
+indicatif = "0.15"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
