--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log        = "0.3"
-tracing    = "0.1"
-toml       = "0.5"
-serde      = "1"
-config     = "0.9"
-anyhow     = "1"
-getset     = "0.1"
-walkdir    = "2"
-resiter    = "0.4"
-itertools  = "0.9"
-clap-v3    = "3.0.0-beta.1"
-indicatif  = "0.15"
-env_logger = "0.7"
+log         = "0.3"
+tracing     = "0.1"
+toml        = "0.5"
+serde       = "1"
+config      = "0.9"
+anyhow      = "1"
+getset      = "0.1"
+walkdir     = "2"
+resiter     = "0.4"
+itertools   = "0.9"
+clap-v3     = "3.0.0-beta.1"
+indicatif   = "0.15"
+env_logger  = "0.7"
+regex 	    = "1"
+lazy_static = "1.4"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
