Differentiate between system-buildtime and system-runtime dependencies
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/example_1/pkg.toml
+++ b/examples/packages/example_1/pkg.toml
@@ -14,6 +14,8 @@ patches = []
 [dependencies]
 system  = []
 system_dep_script = ""
+system_runtime  = []
+system_runtime_dep_script = ""
 build   = []
 build_dep_script = ""
 runtime = []
