--- a/examples/packages/example_1/Makefile
+++ b/examples/packages/example_1/Makefile
@@ -2,7 +2,7 @@ REPO=/tmp/yabos_example_1
 
 setup:
 	@echo Setting up repository in ${REPO}
-	@rm -r ${REPO}
+	@rm -r ${REPO} || true
 	@mkdir -p ${REPO}
 	@cp -r . ${REPO}/
 	@echo Ready.
