Rename: yabos -> butido
Because, after some google-fu, I noticed that "yabos" is indeed not a
very good or even decent name for a piece of software.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yabos"
+name = "butido"
 version = "0.1.0"
 authors = ["Matthias Beyer <mail@beyermatthias.de>"]
 edition = "2018"
