--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ env_logger  = "0.7"
 regex       = "1"
 lazy_static = "1.4"
 uuid	    = { version = "0.8", features = ["v4"] }
+pom         = "3"
+futures     = "0.3"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
