--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ indicatif   = "0.15"
 env_logger  = "0.7"
 regex       = "1"
 lazy_static = "1.4"
+uuid	    = { version = "0.8", features = ["v4"] }
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
