--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ uuid        = { version = "0.8", features = ["v4"] }
 pom         = "3"
 futures     = "0.3"
 handlebars  = "3"
-filters     = "0.3"
+filters     = { git = "https://github.com/matthiasbeyer/filters", branch = "master" }
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
