--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ pom         = "3"
 futures     = "0.3"
 handlebars  = "3"
 filters     = { git = "https://github.com/matthiasbeyer/filters", branch = "master" }
+indoc	    = "1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
