--- a/examples/packages/example_2/config.toml
+++ b/examples/packages/example_2/config.toml
@@ -2,6 +2,8 @@
 
 # repository of package definitions
 repository = "/tmp/butido_example_2"
+releases   = "/dev/null"
+staging    = "/dev/null"
 
 # Phases which can be configured in the packages
 available_phases = [ "unpack", "build", "install", "package" ]
@@ -10,12 +12,15 @@ available_phases = [ "unpack", "build", "install", "package" ]
 # Images which can be used to build
 # images not listed here are automatically rejected
 images = [ "debian:bullseye" ]
+verify_images_present = true
 
 # List of docker endpoints
 [[docker.endpoints]]
 name          = "example host name"
 uri           = "http://0.0.0.0:8095"
 endpoint_type = "http"
+speed	      = 1
+maxjobs       = 1
 
 
 [containers]
