Add DB interface module for talking to the DB directly
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ handlebars  = "3"
 filters     = "0.4.0"
 indoc       = "1"
 diesel      = { version = "1.4", features = ["postgres"] }
+which       = "4"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
