--- a/config.toml
+++ b/config.toml
@@ -79,12 +79,15 @@ available_phases = [ "unpack", "patch", "configure", "build", "fixup", "pack" ]
 # Images which can be used to build
 # images not listed here are automatically rejected
 images = [ "debian:bullseye" ]
+verify_images_present = true
 
 # List of docker endpoints
 [[docker.endpoints]]
 name          = "testhostname"
 uri           = "http://0.0.0.0:8095"
 endpoint_type = "http"
+speed         = 1
+maxjobs       = 1
 
 
 [containers]
