--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ filters     = "0.4.0"
 indoc       = "1"
 diesel      = { version = "1.4", features = ["postgres"] }
 which       = "4"
+ascii_table = "3"
+terminal_size = "0.1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
