Do the right thing when output is a pipe
This changes the display_as_table() function to automatically ignore the
headers and not printing a database, but simply the values as a
whitespace seperated list when stdout is a pipe.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ diesel      = { version = "1.4", features = ["postgres"] }
 which       = "4"
 ascii_table = "3"
 terminal_size = "0.1"
+atty        = "0.2"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
