--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ which       = "4"
 ascii_table = "3"
 terminal_size = "0.1"
 atty        = "0.2"
+csv         = "1.1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
