--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ ascii_table = "3"
 terminal_size = "0.1"
 atty        = "0.2"
 csv         = "1.1"
+chrono      = "0.4"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
