Add model for submit storing
This also needs the "uuid" and "chrono" diesel features.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ filters     = "0.4.0"
 indoc       = "1"
 typed-builder = "0.7"
 tar         = "0.4"
-diesel      = { version = "1.4", features = ["postgres"] }
+diesel      = { version = "1.4", features = ["postgres", "chrono", "uuid"] }
 which       = "4"
 ascii_table = "3"
 terminal_size = "0.1"
