--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ terminal_size = "0.1"
 atty        = "0.2"
 csv         = "1.1"
 chrono      = "0.4"
+git2	    = "0.13"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
