--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log         = "0.3"
 tracing     = "0.1"
 toml        = "0.5"
 serde       = "1"
+serde_json  = "1"
 config      = "0.9"
 anyhow      = "1"
 getset      = "0.1"
