--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ indicatif   = "0.15"
 env_logger  = "0.7"
 regex       = "1"
 lazy_static = "1.4"
-uuid        = { version = "0.8", features = ["v4"] }
+uuid        = { version = "0.6", features = ["serde", "v4"] }
 pom         = "3"
 futures     = "0.3"
 handlebars  = "3"
