--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ atty        = "0.2"
 csv         = "1.1"
 chrono      = "0.4"
 git2	    = "0.13"
+result-inspect = "0.1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
