Add optional version filtering for "source" subcommands
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/example_1/config.toml
+++ b/examples/packages/example_1/config.toml
@@ -5,6 +5,7 @@ repository = "/tmp/butido_example_1"
 
 releases = "/tmp/butido-releases"
 staging  = "/tmp/butido-staging"
+source_cache = "/tmp/butido-sources"
 
 # ####
 #
