--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ git2	    = "0.13"
 result-inspect = "0.1"
 sha1        = { version = "0.6", features = ["std"] }
 sha2        = "0.9"
+reqwest     = { version = "0.10", features = [ "stream" ] }
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
