--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ result-inspect = "0.1"
 sha1        = { version = "0.6", features = ["std"] }
 sha2        = "0.9"
 reqwest     = { version = "0.10", features = [ "stream" ] }
+colored     = "2"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
