--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ sha2        = "0.9"
 reqwest     = { version = "0.10", features = [ "stream" ] }
 colored     = "2"
 syntect     = "4.4"
+thiserror   = "1"
 
 url      = { version = "2", features = ["serde"] }
 tokio    = { version = "0.2", features = ["full"] }
