Update example with some environment variables
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/example_3/b/pkg.toml
+++ b/examples/packages/example_3/b/pkg.toml
@@ -1,6 +1,10 @@
 name              = "b"
 version           = "2"
 
+[environment]
+FOO = "bar"
+BAZ = "bla"
+
 [phases]
 package.script = '''
     mkdir /outputs
