Update dependency: clap: 3.0.0-beta.1 -> 3.0.0-beta.2
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ getset      = "0.1"
 walkdir     = "2"
 resiter     = "0.4"
 itertools   = "0.9"
-clap-v3     = "3.0.0-beta.1"
+clap        = "3.0.0-beta.2"
 indicatif   = "0.15"
 env_logger  = "0.8"
 regex       = "1"
