--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ typed-builder = "0.7"
 tar         = "0.4"
 diesel      = { version = "1.4", features = ["postgres", "chrono", "uuid", "serde_json"] }
 which       = "4"
-ascii_table = "3"
+ascii_table = ">= 3.0.2"
 terminal_size = "0.1"
 atty        = "0.2"
 csv         = "1.1"
