Dependency: tokio: Enable only features we need
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ syntect     = "4.4"
 thiserror   = "1"
 
 url      = { version = "2", features = ["serde"] }
-tokio    = { version = "0.2", features = ["full"] }
+tokio    = { version = "0.2", features = ["macros", "fs"] }
 shiplift = { git = "https://github.com/softprops/shiplift", branch = "master" }
 
 
