Allow multiple sources per package
This patch implements multiple (unnamed) sources per package.
This means that a package can have an array of sources.

What was adapted to allow multiple sources per package:

* Downloads are made in parallel now
* The cache structure was changed to /<package>-<version>/<hash>.source
* The UI was changed to contain the full `Package` struct (as JSON
  object) in a UI format string

Tests were adapted.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/example_1/pkgB/pkg.toml
+++ b/examples/packages/example_1/pkgB/pkg.toml
@@ -1,7 +1,7 @@
 name              = "pkgB"
 version           = "1.0.0"
 
-[source]
+[[sources]]
 url  = "http://somerandomthi.ng/foo/bar.tar.gz"
 hash.type = "sha1"
 hash.hash = "23465"
