--- a/examples/packages/example_2/sub/pkg1/1.0.0/pkg.toml
+++ b/examples/packages/example_2/sub/pkg1/1.0.0/pkg.toml
@@ -1,6 +1,6 @@
 version = "1.0.0"
 
-[source]
+[[sources]]
 url  = "http://somerandomthi.ng/foo/bar-1.0.0.tar.gz"
 hash.type = "sha1"
 hash.hash = "23465"
