--- a/config.toml
+++ b/config.toml
@@ -29,15 +29,7 @@ script_highlight_theme = "Solarized (dark)"
 #
 # Possible tokens are:
 #     i                         - Incrementing number of package that is printed
-#     name                      - Name of the package
-#     version                   - Version of the package
-#     source_url                - URL from where the source was retrieved
-#     source_hash_type          - Type of hash noted in the package
-#     source_hash               - Hash of the sources
-#     system_deps               - System dependencies, as list
-#     system_runtime_deps       - System runtime dependencies, as list
-#     build_deps                - Build dependencies, as list
-#     runtime_deps              - Runtime dependencies, as list
+#     p                         - The package data
 #     print_system_deps         - boolean flag to use in format string, true if user wants to see system deps
 #     print_system_runtime_deps - boolean flag to use in format string, true if user wants to see system runtime deps
 #     print_build_deps          - boolean flag to use in format string, true if user wants to see build deps
