--- a/examples/packages/example_1/pkgA/pkg.toml
+++ b/examples/packages/example_1/pkgA/pkg.toml
@@ -4,7 +4,7 @@ version           = "1.0.0"
 [dependencies]
 runtime = [ "pkgB =1.0.0" ]
 
-[source]
+[[sources]]
 url  = "http://somerandomthi.ng/foo/bar.tar.gz"
 hash.type = "sha1"
 hash.hash = "23465"
