--- a/examples/packages/example_tmux/pkg.toml
+++ b/examples/packages/example_tmux/pkg.toml
@@ -5,7 +5,7 @@ version_is_semver = false
 # no patches by default
 patches = []
 
-[source]
+[[sources]]
 url       = "https://github.com/tmux/tmux/archive/3.1c.tar.gz"
 hash.type = "sha1"
 hash.hash = "5e8bcaa3c758f84f01935a914e2bbf01309462ae"
