Add strict script interpolation
This patch adds strict script interpolation, which means that the script
interpolation will result in an error if a variable is referenced that
does not exist.
Before this patch, referencing an absent variable did result in an empty
string, possibly resulting in an error at runtime.

This feature is on by default.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/config.toml
+++ b/config.toml
@@ -82,6 +82,17 @@ releases = "/tmp/releases"
 #
 staging  = "/tmp/staging"
 
+# Enable strict script interpolation
+#
+# If this is set to true, the variable interpolation for the packaging script
+# will be done in strict mode.
+# Strict mode means, that referencing a variable that does not exist, will
+# result in a rendering error.
+#
+# Default if this setting is missing is true
+#
+strict_script_interpolation = true
+
 # ####
 #
 # Log database configuration
