Add example how to reference a source object
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/example_3/pkg.toml
+++ b/examples/packages/example_3/pkg.toml
@@ -18,6 +18,12 @@ runtime         = []
 [phases]
 
 unpack.script = '''
+    {{#each sources}}
+    echo "{{@key}}  {{this.url}}"
+    echo "          {{this.hash.hash}}"
+    ls /inputs/{{@key}}-{{this.hash.hash}}.source
+    {{/each}}
+
     mkdir /build
     echo "#BUTIDO:PHASE:unpack"
 '''
