--- a/examples/packages/1/repo/c/pkg.toml
+++ b/examples/packages/1/repo/c/pkg.toml
@@ -1,14 +1,15 @@
 name              = "c"
 version           = "3"
 
+[sources.src]
+url       = "http://localhost:8180/c-3.source"
+hash.hash = "ee4110c6e42791861e5720646c965580a0ddae8d"
+
+[dependencies]
+runtime         = ["g =7", "h =8"]
+
+
 [phases]
-package.script = '''
-    mkdir /outputs
-    echo "#BUTIDO:PHASE:package"
-    echo "#BUTIDO:PROGRESS:90"
-
-    touch /outputs/c-3.pkg
-
-    echo "#BUTIDO:PROGRESS:100"
-    echo "#BUTIDO:STATE:OK:finished"
+build.script = '''
+    echo "Building {{name}} in version {{version}}"
 '''
