Add more verbose error reporting
This patch adds more verbose error reporting in case of build error.

It alters the Orchestrator::run() interface to return the Job UUID
alongside the error object.
The UUID object can then be (and is) used in the "build" subcommand
implementation to fetch information about the failed job from the
database and print it to the user.

The number of log lines is configurable.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,10 @@ progress_format = "[{elapsed_precise}] ({percent:>3}%): {bar:40.cyan/blue} | {ms
 # Can be overwritten temporarily via CLI
 script_shebang = "#!/bin/bash"
 
+# The number of log lines to show if a build fails.
+# Defaults to 10
+build_error_lines = 10
+
 # The theme for the highlighting engine when printing the script that ran inside
 # a container.
 #
