Example: Add example linter
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/1/repo/config.toml
+++ b/examples/packages/1/repo/config.toml
@@ -14,6 +14,8 @@
 
 script_highlight_theme = "Solarized (dark)"
 
+script_linter = "linterscript"
+
 # Phases which can be configured in the packages
 available_phases = [ "checksource", "unpack", "build", "package" ]
 
