Disable logging in handlebars
Because the scripts we run should not be able to access the logger
during handlbars rendering.

This is due to the fact that we need to have control over stdout/stderr
because of the progress bar printing, but also because there's
absolutely no need for the user to log during the handlebars rendering
process.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ filters        = "0.4.0"
 futures        = "0.3"
 getset         = "0.1"
 git2           = "0.13"
-handlebars     = "3"
+handlebars     = { version = "3", features = ["no_logging"] }
 indicatif      = "0.15"
 indoc          = "1"
 itertools      = "0.9"
