--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ascii_table    = ">= 3.0.2"
 atty           = "0.2"
 chrono         = "0.4"
 clap           = "3.0.0-beta.2"
+clap_generate  = "3.0.0-beta.2"
 colored        = "2"
 config         = "0.10"
 csv            = "1.1"
