--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ indoc          = "1"
 itertools      = "0.9"
 lazy_static    = "1.4"
 log            = "0.4"
+parse-display  = "0.4"
 pom            = "3"
 regex          = "1"
 reqwest        = { version = "0.10", features = [ "stream" ] }
